--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,301 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300&family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300&family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap');
+
+*{
+  box-sizing: border-box;
+}
+.App{
+  border: 1px solid  rgb(232, 232, 232);
+  width: 100%;
+  max-width: 1300px;
+  margin: 20px auto;
+  height: 80vh;
+  background-color: rgb(230, 243, 230);
+  box-sizing: border-box;
+  
+}
+.nav-logo{
+  flex-wrap: wrap;
+}
+.nav-items h5{
+  position: relative;
+  left: 5px;
+  font-weight: 900;
+  font-size: 0.9rem;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.circle{
+  border-radius: 50%;
+  border: none;
   text-align: center;
+  line-height: 100px;
+  vertical-align: middle;
+  position: relative;
+  left: 0px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav-items {
+  width: 100%;
+  max-width: 1000px;
+  margin: auto;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  z-index: 10;
+}
+.links{
+  margin: auto;
+}
+.links button{
+  border: none;
+  color: none;
+  margin-left: 10px;
+  background: none;
+}
+.lastbtn{
+  background-color: black;
+  padding-block: 10px;
+  padding-inline: 15px;
+  border-radius: 15px;
+  color: white;
+}
+.container{
+ display: flex;
+ justify-content: space-between;
+ width: 100%;
+ max-width: 800px;
+ margin: auto;  
+ position: relative;
+ top: 80px;
+}
+.left-side {
+  text-align: left;
+  position: relative ;
+  top: -50px;
+  left: -90px; 
+}
+.left-side>h1{
+  font-size: 1.8em;
+  width: 150%;
+}
+.left-side>p{
+  width: 160%;
+  line-height: 30px;
+  font-size: 0.9em;
+}
+
+.right-side img{
+  height: 80vh;
+  position: relative;
+  top: -90px;
+  left: 140px;
+  
+}
+.left-side button{
+  border: 1px solid black;
+  padding-block: 10px;
+  padding-inline: 20px;
+  border-radius: 20px;
+  background: none;
+}
+.sectionTwo{
+  width: 100%;
+  max-width: 1300px;
+  height: 200vh;
+  margin: auto;
+  margin-top: -20px;
+}
+.card-con{
+  width: 50%;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: auto;
+  margin-bottom: 100px;
+
+}
+.card{
+  border: none;
+  width: 90%;
+  border-radius: 20px;
+  padding-block: 20px;
+  padding-inline: 10px;
+  text-align: center;
+  box-shadow: -1px -1px 45px -3px rgba(214, 211, 211, 0.283);
+  -webkit-box-shadow: -1px -1px 45px -3px rgba(196, 193, 193, 0.249);
+  -moz-box-shadow: -1px -1px 45px -3px rgba(222, 220, 220, 0.301); 
+}
+.circle-icon{
+  border: none;
+  background-color: rgb(180, 248, 180);
+  border-radius: 50%;
+  color:  rgb(15, 232, 15);
+  margin: auto;
+  width: 35%;
+  height: 10vh;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.circle-desp{
+  font-size: 0.7em;
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+}
+.card-info p{
+  font-size: 0.7em;
+  font-weight: 100;
+  font-family: 'Kumbh Sans', sans-serif;
+  color: gray;
+  width: 80%;
+  text-align: center;
+  margin: auto;
+}
+.point-one{
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+  margin-bottom: 50px;
+}
+.container-one{
+  display: flex;
+  width: 100%;
+  max-width: 1000px;
+  margin: auto;  
+}
+.cont-left{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  width: 50%;
+}
+
+.sec-con{
+  border: none;
+  border-radius: 20px;
+  border-left: 1px;
+  width: 90%;
+  padding-block: 15px;
+  padding-inline: 20px;
+  text-align: left;
+  margin-bottom: 20px;
+  box-shadow: -1px -1px 45px -3px rgba(214, 211, 211, 0.283);
+  -webkit-box-shadow: -1px -1px 45px -3px rgba(196, 193, 193, 0.249);
+  -moz-box-shadow: -1px -1px 45px -3px rgba(222, 220, 220, 0.301); 
+}
+.sec-icon{
+  border: none;
+  background-color: rgb(180, 248, 180);
+  border-radius: 50%;
+  color:  rgb(15, 232, 15);
+  width: 25%;
+  height: 7vh;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.sec-con p , h3{
+  text-align: left;
+}
+.sec-desp{
+  font-size: 1.9vh;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+}
+.sec-con p{
+  font-size: 0.7em;
+  font-weight: 100;
+  /* font-family: 'Kumbh Sans', sans-serif; */
+  color: gray;
+  width: 100%;
+  text-align: left;
+}
+.cont-right{
+  width: 50%;
+  text-align: left;
+}
+.cont-right p{
+  font-family: 'Poppins', sans-serif;
+  font-size: 0.7em;
+  width: 80%;
+  margin-left: 25px;
+}
+#list{
+  font-family: 'Poppins', sans-serif;
+  font-size: 0.7em;
+  line-height: 30px;
+  width: 100%;
+  font-weight: 600;
+}
+.last-con{
+  width: 100%;
+  max-width: 1000px;
+  margin:60px auto;
+}
+.last-con h2{
+  font-family: 'Poppins', sans-serif;
+}
+.last-con p{
+  font-family: 'Poppins', sans-serif;
+  font-size: 0.8em;
+  width: 40%;
+}
+.last-con button{
+  border: 1px solid black;
+  padding-block: 10px;
+  padding-inline: 20px;
+  border-radius: 20px;
+  background-color: black;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.section-three{
+  width: 100%;
+  max-width: 1000px;
+  margin: auto;
+  height: 10vh;
+  display: flex;
+  justify-content: space-around;
+}
+.foot-one{
+  width: 50%;
+  margin-top: 40px;
+}
+.foot-one h3{
+  font-family: 'Poppins', sans-serif;
+
+}
+.foot-one .context {
+  font-size: 0.8em;
+  width: 85%;
+  margin-bottom: 350px;
+  line-height: 30px;
+  font-family: 'Poppins', sans-serif;
+
+}
+.foot-two{
+  width: 50%;
+  margin-top: 60px;
+  position: relative;
+  left: -20px
+}
+table {
+  width: 100%;
+  font-size: 0.8em;
+  font-family: 'Poppins', sans-serif;
+  
+}
+th{
+  text-align: left;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+td{
+  text-align: left;
+}
+
+.section-three h6{
+  position: relative;
+  text-align: left;
+  color: gainsboro;
+  left: -60px;
 }
