--- a/src/App.css
+++ b/src/App.css
@@ -87,7 +87,7 @@
 .right-side img{
   height: 80vh;
   position: relative;
-  top: -90px;
+  top: -93px;
   left: 140px;
   
 }
@@ -130,7 +130,7 @@
   border: none;
   background-color: rgb(180, 248, 180);
   border-radius: 50%;
-  color:  rgb(15, 232, 15);
+  color:  rgb(3, 88, 3);
   margin: auto;
   width: 35%;
   height: 10vh;
@@ -187,7 +187,7 @@
   border: none;
   background-color: rgb(180, 248, 180);
   border-radius: 50%;
-  color:  rgb(15, 232, 15);
+  color:  rgb(3, 88, 3);
   width: 25%;
   height: 7vh;
   display: flex;
@@ -251,24 +251,31 @@
 
 .section-three{
   width: 100%;
-  max-width: 1000px;
+  max-width: 1300px;
   margin: auto;
-  height: 10vh;
+  height: 70vh;
+  background-color: gainsboro;
+ 
+  border: 1px solid red;
+}
+.foot-con{
+  width: 80%;
   display: flex;
   justify-content: space-around;
+  margin: auto;
 }
 .foot-one{
   width: 50%;
   margin-top: 40px;
 }
 .foot-one h3{
-  font-family: 'Poppins', sans-serif;
-
+  font-size: 0.9rem;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .foot-one .context {
   font-size: 0.8em;
   width: 85%;
-  margin-bottom: 350px;
+  margin-bottom: 0px;
   line-height: 30px;
   font-family: 'Poppins', sans-serif;
 
@@ -293,9 +300,11 @@ td{
   text-align: left;
 }
 
-.section-three h6{
+.rightholder p{
   position: relative;
   text-align: left;
-  color: gainsboro;
-  left: -60px;
+  font-size: 0.8em;
+  color: gray;
+  font-family: 'Poppins', sans-serif;
+  margin-top: 160px;
 }
